# vbl-pro-2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs  tray.rs
app/ui/: index.html  package.json  tsconfig.json  vite.config.ts
app/ui/src/: App.tsx  api.ts  bindings.ts  styles.css  types.ts
app/ui/src/components/: Capture.tsx  Config.tsx  Dashboard.tsx  DslEditor.tsx  Logs.tsx  Macros.tsx  Monitor.tsx  Profiles.tsx  WindowControls.tsx
crates/vbl-cli/: Cargo.toml
crates/vbl-cli/src/: main.rs
crates/vbl-core/: Cargo.toml
crates/vbl-core/src/: actions.rs  color.rs  dsl.rs  error.rs  event.rs  executor.rs  geometry.rs  input.rs  lib.rs  macros.rs  migrate.rs  persist.rs  profile.rs  state.rs  testing.rs  time.rs  traits.rs  vbl.rs
crates/vbl-core/tests/: dsl_behavior.rs  vbl_behavior.rs
crates/vbl-engine/: Cargo.toml
crates/vbl-engine/src/: driver.rs  lib.rs  runtime.rs  store.rs
crates/vbl-ipc/: Cargo.toml
crates/vbl-ipc/src/: lib.rs
crates/vbl-platform-win/: Cargo.toml
crates/vbl-platform-win/src/: capture.rs  clock.rs  dxgi_capture.rs  input_hook.rs  input_sink.rs  keymap.rs  lib.rs  overlay.rs  window.rs
crates/vbl-scripting/: Cargo.toml
crates/vbl-scripting/src/: lib.rs
crates/vbl-scripting/tests/: controller.rs  host.rs
xtask/: Cargo.toml
xtask/src/: main.rs
