[workspace]
resolver = "2"
members = [
    "crates/vbl-core",
    "crates/vbl-ipc",
    "crates/vbl-engine",
    "crates/vbl-scripting",
    "crates/vbl-platform-win",
    "crates/vbl-cli",
    "xtask",
]

exclude = ["app/src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["VBL Pro contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

specta = { version = "=2.0.0-rc.25", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
