[package]
name = "vbl-pro-2"
version = "0.1.0"
edition = "2021"
description = "VBL Pro 2 — Tauri desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
vbl-core = { path = "../../crates/vbl-core", features = ["specta"] }
vbl-engine = { path = "../../crates/vbl-engine", features = ["specta"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

specta = { version = "=2.0.0-rc.25", features = ["derive", "function"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
strip = false
