[package]
name = "vbl-pro-2"
version = "0.1.1"
edition = "2021"
description = "VBL Pro 2 — Tauri desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
vbl-core = { path = "../../crates/vbl-core", features = ["specta"] }
vbl-engine = { path = "../../crates/vbl-engine", features = ["specta"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

specta = { version = "=2.0.0-rc.25", features = ["derive", "function"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

# Optimized release: thin LTO + O3 + strip. codegen-units = 16 (instead of 1) keeps most of the
# optimization while compiling much faster — single-codegen-unit buys little for this
# event/timer-driven app but costs a lot of build time. CI gets its speed from caching, not from
# dropping optimization.
[profile.release]
lto = "thin"
codegen-units = 16
strip = true
