[package]
name = "vbl-platform-win"
description = "Windows implementations of the vbl-core traits (input, timing, capture, focus, overlay)."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
vbl-core = { path = "../vbl-core" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Media",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
]
