[package]
name = "vbl-scripting"
description = "Embedded Luau host (mlua) for sandboxed user macro scripts."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
vbl-core = { path = "../vbl-core" }
thiserror = { workspace = true }

mlua = { version = "0.11", features = ["luau"] }
